Bug 1998850 - Use Boolean.valueOf() instead of deprecated constructor. r=geckoview-reviewers,m_kato
warning: Use `Boolean.valueOf(credProps)` instead (UseValueOf)

Differential Revision: https://phabricator.services.mozilla.com/D271718

UltraBlame original commit: b3ab434b6fe40a9fc905141eb7d9c44cf6e4f19e